# gdorksAI

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  dork-category.yml  feature.yml  security.yml
.github/workflows/: ci.yml
app/: capabilities.py  main.py  web.py
app/core/: ai.py  dorks.py  events.py  health.py  readiness.py  runtime_config.py  scope.py  sessions.py  status.py
app/core/prompts/: pivot_v1.md  query_gen_v1.md  report_v1.md  triage_v1.md
app/templates/: _events_table.html  _query_error.html  _query_results.html  _render_refused.html  _render_success.html  _report_result.html  _search_results.html  _status_cards.html  _triage_results.html  base.html  category.html  diagnostics.html  dorks.html  index.html  pivot.html  query.html  render_standalone.html  report.html  session_detail.html  sessions.html  status.html  triage.html
docs/: AI_INTEGRATION.md  ARCHITECTURE.md  OPERATIONS.md  PIPELINE.md  ROADMAP.md  SECURITY.md  WORKFLOW.md
scripts/: setup-labels.sh
tests/: conftest.py  test_ai.py  test_capabilities.py  test_dorks.py  test_events.py  test_health.py  test_pivot.py  test_query.py  test_readiness.py  test_report.py  test_report_compose.py  test_runtime_config.py  test_scope.py  test_scope_authorize.py  test_session_detail.py  test_sessions.py  test_sessions_index.py  test_status.py  test_triage.py  test_web.py
